vlib/v/checker/tests/invalid_insert_references_test.vv
// fixes https://github.com/vlang/v/issues/3600, test based on a simplified version of example by https://github.com/radare
fn test_invalid_insert_references() {
	b := 0
	mut a := [&b]
	mut c := 1
	a << &c
	c = 2
	a << 1
	println(a)
}

fn main() {
	test_invalid_insert_references()
}
